--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,4 +22,4 @@ jobs:
         run: docker build --rm -t frontend-image .
 
       - name: Run container
-        run: docker run -d -p 5173:5173 --name frontend-container frontend-image
+        run: docker run --restart unless-stopped -d -p 5173:5173 --name frontend-container frontend-image
